Completed exercises 02-01 and 02-02.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ add_definitions(-Werror)
 # Compile source directory.
 add_subdirectory(chapter00)
 add_subdirectory(chapter01)
+add_subdirectory(chapter02)
 
