Added initial directory structure for Chapter 03.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,5 @@ add_definitions(-Werror)
 add_subdirectory(chapter00)
 add_subdirectory(chapter01)
 add_subdirectory(chapter02)
+add_subdirectory(chapter03)
 
