Clean-up commit of cmake files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,31 @@
+
+CMakeCache.txt
+chapter00/0-0/src/Exercise00-00
+chapter00/0-10/src/Exercise00-10
+chapter00/0-2/src/Exercise00-02
+chapter00/0-3/src/Exercise00-03
+chapter00/0-4/src/Exercise00-04
+chapter00/0-6/src/Exercise00-06
+chapter00/0-9/src/Exercise00-09
+chapter01/01-00/src/Exercise01-00
+chapter01/01-01/src/Exercise01-01
+chapter01/01-03/src/Exercise01-03
+chapter01/01-04/src/Exercise01-04
+chapter01/01-05/src/Exercise01-05
+chapter01/01-06/src/Exercise01-06
+chapter02/02-00/src/Exercise02-00
+chapter02/02-01/src/Exercise02-01
+chapter02/02-02/src/Exercise02-02
+chapter02/02-03/src/Exercise02-03
+chapter02/02-04/src/Exercise02-04
+chapter02/02-05/src/Exercise02-05
+chapter02/02-06/src/Exercise02-06
+chapter02/02-07/src/Exercise02-07
+chapter02/02-08/src/Exercise02-08
+chapter02/02-09/src/Exercise02-09
+chapter03/03-00/src/Exercise03-00
+
+
 # Compiled source #
 ###################
 *.com
