Added exercise from chapter 4.

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@ chapter02/02-07/src/Exercise02-07
 chapter02/02-08/src/Exercise02-08
 chapter02/02-09/src/Exercise02-09
 chapter03/03-00/src/Exercise03-00
+chapter04/04-00/src/Exercise04-00
+
 
 
 # Compiled source #
